2008-11-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/tables.c (lookup_table_nth): Leading substring match is all very
	well, but return an exact match if one exists.  This fixes color lookup
	for e.g.  grey/grey10/grey100.

	* src/graphics.c (boundary) src/graph3d.c (boundary3d):
	`set {lrbt}margin at screen FRAC` should behave consistently for all
	four plot borders.  Ignore the current value of `set origin`.
	Bug #2345000

	* term/svg.trm: Force stroke to match fill color in pointtype 5.

2008-11-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_set_datafile_binary plot_option_binary_format
	plot_option_binary): Restore tracking of default binary filetype.
	Issue error rather than segfaulting on unsupported command
	"set datafile binary format=...".
	Bug #2345499

2008-11-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/README: Updated.

	* config/makefile.cyg config/makefile.mgw: Choose *.exe targets in
	makefile.cyg as in makefile.mgw.

2008-11-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Work around two bugs in current svg implementations.
	The setting of xml:space="preserve" is not correctly inherited from the
	enviroment, so we must set it explicitly for each text fragment.
	Resetting dy="foo" after a sub- or superscript is best done inside the
	same text block.

2008-11-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw: Targets are wgnuplot.exe, wgnuplot_pipes.exe,
	gnuplot.exe; pgnuplot.exe is kept as it was until now.

2008-11-19  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_options): If no information is available about what
	default scalable font might be available we currently give up and fall
	back to a built in non-scalable font.  Now we try font "arial" before
	falling back.  Who knows, it might even be available.

2008-11-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/bitmap.c src/bitmap.h src/tables.c src/tables.h src/show.c