@@ -1,3 +1,13 @@
+2008-12-02  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c (plot_option_binary plot_option_array):
+	Setting default suboptions for binary file input was documented, but
+	never implemented.  Now it is.
+	    set datafile binary record=5x5 format="%double"
+	However, I believe that the syntax should be changed everywhere to 
+	    set datafile binary record="5x5" format="%double"
+	Bug #2378535
+
 2008-11-28  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/tables.c (lookup_table_nth): Leading substring match is all very
